# nx-witness-plugin

./: .gitattributes  CMakeLists.txt  CMakeUserPresets.json  build.psd1  manifest.json  vcpkg.json
db/: sample_face1.npy
db/blacklist/: sink.npy  slow.npy  song.npy  stacy.npy  syu.npy  tally.npy  tax.npy  tea.npy  teddy.npy  yu.npy
db/whitelist/: abad.npy  admad.npy  ali.npy  aliyu.npy  amy.npy  andy.npy  apple.npy  david.npy  drown.npy  jane.npy  jason.npy  jimmy.npy  john.npy  kim.npy  kitty.npy  lawson.npy  peach.npy  sally.npy  sam.npy  show.npy
include/metadata_sdk/docs/html/: action__response_8h_source.html  actions_8h_source.html  active__setting__changed__action_8h_source.html  active__setting__changed__response_8h_source.html  active__settings__builder_8h_source.html  active__settings__rules_8h_source.html  analytics_2i__plugin_8h_source.html  annotated.html  apple__utils_8h_source.html  attribute_8h_source.html  best__shots_2settings_8h_source.html  class_output_redirector_adapter-members.html  class_output_redirector_adapter.html  class_output_redirector_test-members.html  class_output_redirector_test.html  classes.html  classjson11_1_1_json_array-members.html  classjson11_1_1_json_array.html  classjson11_1_1_json_boolean-members.html  classjson11_1_1_json_boolean.html  classjson11_1_1_json_double-members.html  classjson11_1_1_json_double.html  classjson11_1_1_json_int-members.html  classjson11_1_1_json_int.html  classjson11_1_1_json_null-members.html  classjson11_1_1_json_null.html  classjson11_1_1_json_object-members.html  classjson11_1_1_json_object.html  classjson11_1_1_json_string-members.html  classjson11_1_1_json_string.html  classjson11_1_1_value-members.html  classjson11_1_1_value.html  classnx_1_1kit_1_1_ini_config-members.html  classnx_1_1kit_1_1_ini_config.html  classnx_1_1kit_1_1_ini_config_1_1_impl-members.html  classnx_1_1kit_1_1_ini_config_1_1_impl.html  classnx_1_1kit_1_1_output_redirector-members.html  classnx_1_1kit_1_1_output_redirector.html  classnx_1_1kit_1_1debug_1_1detail_1_1_fps-members.html  classnx_1_1kit_1_1debug_1_1detail_1_1_fps.html  (+729 more)
include/metadata_sdk/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+60 more)
src/mimos/face_plugin/: detection.cpp  detection.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  event.h  exceptions.h  frame.h  geometry.h  object_detector.cpp  object_detector.h  object_tracker.cpp  object_tracker.h  object_tracker_utils.cpp  object_tracker_utils.h  plugin.cpp  plugin.h
src/nx/vms_server_plugins/analytics/sample/: device_agent.cpp  device_agent.h  engine.cpp  engine.h  plugin.cpp  plugin.h
